--- a/index.html
+++ b/index.html
@@ -305,20 +305,19 @@
           <div class="col-md-12 text-center">
 
           <h2 class="service-title pad-bt15">Our Approach</h2>
-           <h3>Does it work?</h3>
-            <p class="sub-title pad-bt15">Yup! Big time! Our first cohort of mentees at CCNY are working this summer. At RBC, Barclays, and Centiment. And these are our FRESHMEN!!!!! Yes, first-year students.</p>
-            <p class="sub-title pad-bt15">They are getting gigs in the gig economy before they even finish their first year of study! By the time they graduate they will be primed to tackle any job at any tech venture. We know it. In due course, you will too!</p>
+          <h3>Does it work?</h3>
+          <p class="sub-title pad-bt15">Yup! Big time! Our first cohort of mentees at CCNY are working this summer at RBC, Barclays, and Centiment. And these are our FRESHMEN!!</p>
           <hr class="bottom-line">`
 
 
            <h3>Getting a job is hard work!</h3>
-            <p class="sub-title pad-bt15">Getting a great job is even harder. That’s where CCNY Code steps in. We know what it takes to succeed. We prep our students from Day 1. Before they even start their academics. Before they even think of looking for a job, never mind a career.</p>
-            <p class="sub-title pad-bt15">We demand our scholars commit to a code of conduct. They must prove their value and worth. They must commit to elevate their reach. To give us their time and tenacity.</p>
+            <p class="sub-title pad-bt15">We know what it takes to succeed. We prep our students from Day 1. Before they even start their academics or think of looking for a job, never mind a career.</p>
+            <p class="sub-title pad-bt15">Our scholars must prove their value and worth. They must commit to elevate their reach. To give us their time and tenacity.</p>
             <p class="sub-title pad-bt15">In turn, we commit to build their professional outlook. Break down barriers. Open doors to their future. We expect that true success will take four years to measure, when they graduate. But we have already seen signs of success.</p>
           <hr class="bottom-line">
 
            <h3>Demand a lot, Get a lot</h3>
-            <p class="sub-title pad-bt15">Our proof of concept works. Our students are a huge success! One semester is all it took. We started in February 2017. We mentored and coached arranged meetings with professional mentors and all-in-all cloaked our freshmen CS honors students with the state of mind that they can excel. They have transformed. They are equipped to compete and connect and perform at the highest of standards.</p>
+            <p class="sub-title pad-bt15">We mentored and coached arranged meetings with professional mentors and all-in-all cloaked our freshmen CS honors students with the state of mind that they can excel. They have transformed. They are equipped to compete and connect and perform at the highest of standards.</p>
           <hr class="bottom-line">          
 
            <h3>The Future</h3>
@@ -326,7 +325,7 @@
             <hr class="bottom-line">
 
            <h3>Born out of Necessity</h3>
-            <p class="sub-title pad-bt15">CCNY Code is a side project built out of duty and honor. It started as an accident. A chance meeting between a CS student and a single alumnus Graduates of CCNY. Separated by disciplines, one a budding CS engineer, the other an ex-journalist and editor turned lawyer and asset manager. Separated by 40 years, David Wysoki and Anthony Shalagin met on campus after an event and realized they desired to do something spectacular. CCNY Code is their invention.</p>
+            <p class="sub-title pad-bt15">CCNY Code is a side project built out of duty and honor. It started in February 2017 as an accident. A chance meeting between a CS student and a single alumnus Graduates of CCNY. Separated by disciplines, one a budding CS engineer, the other an ex-journalist and editor turned lawyer and asset manager. Separated by 40 years, David Wysoki and Anthony Shalagin met on campus after an event and realized they desired to do something spectacular. CCNY Code is their invention.</p>
           <hr class="bottom-line">    
 
 
