--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           <h2 class="service-title pad-bt15">Our Approach</h2>
           <h3>Does it work?</h3>
           <p class="sub-title pad-bt15">Yup! Big time! Our first cohort of mentees at CCNY are working this summer at RBC, Barclays, and Centiment. And these are our FRESHMEN!!</p>
-          <hr class="bottom-line">`
+          <hr class="bottom-line">
 
 
            <h3>Getting a job is hard work!</h3>
@@ -325,7 +325,7 @@
             <hr class="bottom-line">
 
            <h3>Born out of Necessity</h3>
-            <p class="sub-title pad-bt15">CCNY Code is a side project built out of duty and honor. It started in February 2017 as an accident. A chance meeting between a CS student and a single alumnus Graduates of CCNY. Separated by disciplines, one a budding CS engineer, the other an ex-journalist and editor turned lawyer and asset manager. Separated by 40 years, David Wysoki and Anthony Shalagin met on campus after an event and realized they desired to do something spectacular. CCNY Code is their invention.</p>
+            <p class="sub-title pad-bt15">CCNY Code is a side project built out of duty and honor in February 2017 as an accident. A chance meeting between a CS student and a single alumnus Graduates of CCNY. Separated by disciplines, one a budding CS engineer, the other an ex-journalist and editor turned lawyer and asset manager. Separated by 40 years, David Wysoki and Anthony Shalagin met on campus after an event and realized they desired to do something spectacular. CCNY Code is their invention.</p>
           <hr class="bottom-line">    
 
 
