Post student profiles

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                       <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
                 </div>
                 -->
-                <p>Kirstyn is a Girls Who Code and CodeNow alumni. As a freshman, she was accepted to participate in CUNY Tech Prep, a full-stack JavaScript bootcamp that helps students develop technical and professional skills (even though the program usually only accepts juniors and seniors). In the summer of 2017, Kirstyn was an instructor at CodeNow, introducing high schoolers to full-stack web app development using HTML, CSS, JavaScript, and Ruby on Rails. Kirstyn had also participated in the HackNY hackathon, where she built SignThis with other members to translate sign language into English (using artificial intelligence). She aspires to become a successful Software Engineer specializing in artificial intelligence in the future. </p>
-                <a href="" class="read-more">Read more →</a>
+                <p>Kirstyn is a <strong>Girls Who Code</strong> and <strong>CodeNow</strong> alumni. She currently participates in <strong>CUNY Tech Prep</strong>, a full-stack JavaScript bootcamp. Kirstyn recently was an instructor at CodeNow, introducing high schoolers to full-stack web app development. In the <strong>HackNY hackathon</strong>, she worked on the back-end of SignThis, a web app that translates sign language into English using artificial intelligence. She aspires to become a successful Software Engineer specializing in artificial intelligence in the future.</p>
+                <!--<a href="" class="read-more">Read more →</a>-->
               </div>
             </div>
           </div>
@@ -186,11 +186,11 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/michael.png" class="img-responsive">
+                  <img src="img/adomas.jpg" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
-                <h2>Michael Ousseinov</h2>
+                <h2>Adomas Hassan</h2>
                 <!--
                 <div class="blog-comment">
                     <p>Posted In: <span>Legal Advice</span></p>
@@ -199,8 +199,8 @@
                       <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
                 </div>
                 -->
-                <p>Something about Michael</p>
-                <a href="" class="read-more">Read more →</a>
+                <p>Adomas is a rising sophomore in the Macaulay Honors College where he is studying Computer Science and Math in order to work in the Financial Technology industry. He is currently interning at <strong>Compstak</strong> as a Data Analyst Intern. He is a <strong>winner of HackNY’s Major League Hacking</strong> 2016-2017 special themed prize where he worked in a team of six to build a Slack Bot to monitor channels for negativity as well as inappropriate images and texts as filtered by an admin by using Clarifai, open sentiment, and slackbot API.</p>
+                <!--<a href="" class="read-more">Read more →</a>-->
               </div>
             </div>
           </div>
@@ -208,11 +208,11 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/Concertfish.png" class="img-responsive">
+                  <img src="img/meghna.jpg" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
-                <h2>Someone</h2>
+                <h2>Meghna Pai</h2>
                 <!--
                 <div class="blog-comment">
                     <p>Posted In: <span>Legal Advice</span></p>
@@ -221,8 +221,74 @@
                       <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
                 </div>
                 -->
-                <p>Something about someone</p>
-                <a href="" class="read-more">Read more →</a>
+                <p>Meghna Pai is currently an <strong>intern at the Neural Engineering Lab</strong> at the Center for Discovery and Innovation, where she is assisting in the design of a Optogenetics device for protein activation. At the <strong>HackNY hackathon</strong>, Meghna partook in the development of an application that translates American Sign Language (ASL) to English in real time.</p><br><br><br><br><br>
+                <!--<a href="" class="read-more">Read more →</a>-->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="blog-sec">
+              <div class="blog-img">
+                <a href="">
+                  <img src="img/melvin.png" class="img-responsive">
+                </a>
+              </div>
+              <div class="blog-info">
+                <h2>Melvin Cheria</h2>
+                <!--
+                <div class="blog-comment">
+                    <p>Posted In: <span>Legal Advice</span></p>
+                    <p>
+                      <span><a href="#"><i class="fa fa-comments"></i></a> 15</span>
+                      <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
+                </div>
+                -->
+                <p>Melvin is a rising junior who is working on a <strong>schedule maker</strong> that integrated with CUNYfirst. He enjoys competitive programming and will be competing in the <strong>ACM ICPC</strong>. He is a recipient of the <strong>HackNY #HackHarassment prize</strong>.</p>
+                <!--<a href="" class="read-more">Read more →</a>-->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="blog-sec">
+              <div class="blog-img">
+                <a href="">
+                  <img src="img/tahsin.jpg" class="img-responsive">
+                </a>
+              </div>
+              <div class="blog-info">
+                <h2>Tahsin Jahin</h2>
+                <!--
+                <div class="blog-comment">
+                    <p>Posted In: <span>Legal Advice</span></p>
+                    <p>
+                      <span><a href="#"><i class="fa fa-comments"></i></a> 15</span>
+                      <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
+                </div>
+                -->
+                <p>Tahsin Jahin is a rising junior who aspires to work in the <strong>EdTech industry</strong> and looks forward to using technology to make a difference in society. She recently attended her first hackathon at <strong>HackNY</strong> and worked on the front end of a web app that translates American Sign Language into letters and words.</p>
+                <!--<a href="" class="read-more">Read more →</a>-->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="blog-sec">
+              <div class="blog-img">
+                <a href="">
+                  <img src="img/darius.jpg" class="img-responsive">
+                </a>
+              </div>
+              <div class="blog-info">
+                <h2>Darius San Agustin</h2>
+                <!--
+                <div class="blog-comment">
+                    <p>Posted In: <span>Legal Advice</span></p>
+                    <p>
+                      <span><a href="#"><i class="fa fa-comments"></i></a> 15</span>
+                      <span><a href="#"><i class="fa fa-eye"></i></a> 11</span></p>
+                </div>
+                -->
+                <p>Darius has been fascinated with computers since he was 10 and <strong>built custom levels</strong> for Super Mario World (SNES) using a program called <strong>Lunar</strong>. Recently, Darius developed an app called <strong>Virtual Scavenger Hunt</strong>, where the app challenges the user to find a certain objects. The user then snaps a photo of said object, and the image is sent to <strong>Clarifai</strong> servers to determine if there is indeed a watch or a shoe in the photo. </p>
+                <!--<a href="" class="read-more">Read more →</a>-->
               </div>
             </div>
           </div>
@@ -299,6 +365,48 @@
     </section>
     <!---->
     <!---->
+    <section id="testimonial" class="wow fadeInUp delay-05s">
+      <div class="bg-testicolor">
+        <div class="container section-padding">
+        <div class="row">
+          <div class="testimonial-item">
+            <ul class="bxslider">
+              <li>
+                <blockquote>
+                  <img src="img/thumb.png" class="img-responsive">
+                  <p>Come a day there won't be room for naughty men like us to slip about at all. This job goes south, there well may not be another. </p>
+                </blockquote>
+                <small>Shaun Paul, Client</small>
+              </li>
+              <li>
+                <blockquote>
+                  <img src="img/thumb.png" class="img-responsive">
+                  <p>So here is us, on the raggedy edge. Don't push me, and I won't push you. </p>
+                </blockquote>
+                <small>Marry Smith, Client</small>
+              </li>
+              <li>
+                <blockquote>
+                  <img src="img/thumb.png" class="img-responsive">
+                  <p>Come a day there won't be room for naughty men like us to slip about at all. This job goes south, there well may not be another.</p>
+                </blockquote>
+                <small>Vivek Singh, Client</small>
+              </li>
+              <li>
+                <blockquote>
+                  <img src="img/thumb.png" class="img-responsive">
+                  <p>So here is us, on the raggedy edge. Don't push me, and I won't push you.</p>
+                </blockquote>
+                <small>John Doe, Client</small>
+              </li>
+            </ul>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+    <!---->
+    <!---->
     <section id="service" class="section-padding wow fadeInUp delay-05s">
       <div class="container">
         <div class="row">
@@ -349,55 +457,6 @@
         </div>
       </div>
     </section>
-    <!---->
-    <!---->
-    <!---->
-    <!---->
-    
-    <!---->
-    <!---->
-    <!--
-    <section id="testimonial" class="wow fadeInUp delay-05s">
-      <div class="bg-testicolor">
-        <div class="container section-padding">
-        <div class="row">
-          <div class="testimonial-item">
-            <ul class="bxslider">
-              <li>
-                <blockquote>
-                  <img src="img/thumb.png" class="img-responsive">
-                  <p>Come a day there won't be room for naughty men like us to slip about at all. This job goes south, there well may not be another. </p>
-                </blockquote>
-                <small>Shaun Paul, Client</small>
-              </li>
-              <li>
-                <blockquote>
-                  <img src="img/thumb.png" class="img-responsive">
-                  <p>So here is us, on the raggedy edge. Don't push me, and I won't push you. </p>
-                </blockquote>
-                <small>Marry Smith, Client</small>
-              </li>
-              <li>
-                <blockquote>
-                  <img src="img/thumb.png" class="img-responsive">
-                  <p>Come a day there won't be room for naughty men like us to slip about at all. This job goes south, there well may not be another.</p>
-                </blockquote>
-                <small>Vivek Singh, Client</small>
-              </li>
-              <li>
-                <blockquote>
-                  <img src="img/thumb.png" class="img-responsive">
-                  <p>So here is us, on the raggedy edge. Don't push me, and I won't push you.</p>
-                </blockquote>
-                <small>John Doe, Client</small>
-              </li>
-            </ul>
-          </div>
-        </div>
-        </div>
-      </div>
-    </section>
-    -->
     <!---->
     <!---->
     <section id="contact" class="section-padding wow fadeInUp delay-05s">
