--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li class=""><a href="#whatwedo">What we do</a></li>
                 <li class=""><a href="#blog">How we do it</a></li>
                 <li class=""><a href="#portfolio">Success</a></li>
+                <li class=""><a href="#testimonial">Testimonial</a></li>
                 <li class=""><a href="#service">Our Approach</a></li>
                 <li class=""><a href="#contact">Contact Us</a></li>
               </ul>
@@ -164,7 +165,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/kirstyn.png" class="img-responsive">
+                  <img src="img/kirstyn.jpeg" class="img-responsive smaller">
                 </a>
               </div>
               <div class="blog-info">
@@ -186,7 +187,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/adomas.jpg" class="img-responsive">
+                  <img src="img/adomas.jpg" class="img-responsive smaller">
                 </a>
               </div>
               <div class="blog-info">
@@ -208,7 +209,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/meghna.jpg" class="img-responsive">
+                  <img src="img/meghna.jpg" class="img-responsive smaller">
                 </a>
               </div>
               <div class="blog-info">
@@ -230,7 +231,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/melvin.png" class="img-responsive">
+                  <img src="img/melvin.png" class="img-responsive smaller">
                 </a>
               </div>
               <div class="blog-info">
@@ -252,7 +253,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/tahsin.jpg" class="img-responsive">
+                  <img src="img/tahsin.jpg" class="img-responsive smaller" id="tahsin">
                 </a>
               </div>
               <div class="blog-info">
@@ -274,7 +275,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/darius.jpg" class="img-responsive">
+                  <img src="img/darius.jpg" class="img-responsive smaller">
                 </a>
               </div>
               <div class="blog-info">
@@ -311,7 +312,7 @@
               <img src="img/tripetsy.jpg" class="img-responsive">
               <figcaption>
                   <h2>CCNY + Etsy</h2>
-                  <p>CCNY students were given an office tour at Etsy and attended a panel hosted by Etsy Engineers, Product Managers, Engineering Managers, and others to discuss what really matters in a real world work setting.</p>
+                  <p>CCNY students were given an office tour at Etsy and attended a panel hosted by Etsy Engineers, Product Managers, Engineering Managers, and others.</p>
               </figcaption>
             </figure>
           </div>
