--- a/index.html
+++ b/index.html
@@ -421,12 +421,12 @@
 
            <h3>Getting a job is hard work!</h3>
             <p class="sub-title pad-bt15">We know what it takes to succeed. We prep our students from Day 1. Before they even start their academics or think of looking for a job, never mind a career.</p>
-            <p class="sub-title pad-bt15">Our scholars must prove their value and worth. They must commit to elevate their reach. To give us their time and tenacity.</p>
-            <p class="sub-title pad-bt15">In turn, we commit to build their professional outlook. Break down barriers. Open doors to their future. We expect that true success will take four years to measure, when they graduate. But we have already seen signs of success.</p>
+            <p class="sub-title pad-bt15">Our scholars must prove their value and worth. They must commit to give us their time and tenacity.</p>
+            <p class="sub-title pad-bt15">In turn, we commit to build their professional outlook. Break down barriers. Open doors to their future.<p>
           <hr class="bottom-line">
 
            <h3>Demand a lot, Get a lot</h3>
-            <p class="sub-title pad-bt15">We mentored and coached arranged meetings with professional mentors and all-in-all cloaked our freshmen CS honors students with the state of mind that they can excel. They have transformed. They are equipped to compete and connect and perform at the highest of standards.</p>
+            <p class="sub-title pad-bt15">We mentored and coached arranged meetings with professional mentors and all-in-all cloaked our freshmen CS honors students with the state of mind that they can excel.</p>
           <hr class="bottom-line">          
 
            <h3>The Future</h3>
