Include testimonial section, change pics 'How we do it'

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <p class="bnr-para">We are a high-value, low-cost mentoring and career outreach platform</p>
               <div class="brn-btn">
                 <a href="#" class="btn btn-download">Donate</a>
-                <a href="#" class="btn btn-more">Learn More</a>
+                <a href="#whatwedo" class="btn btn-more">Learn More</a>
               </div>
               <div class="overlay-detail">
                 <a href="#feature"><i class="fa fa-angle-down"></i></a>
@@ -125,7 +125,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="wrap-item text-center">
                   <div class="item-img">
-                    <img src="img/ser01.png">
+                    <img src="img/brightest.png">
                   </div>
                   <h3 class="pad-bt15">Best and brightest</h3>
                   <p>SATs and GPAs on par with Ivy League students and full-tuition merit-based scholarships.</p>
@@ -134,7 +134,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="wrap-item text-center">
                   <div class="item-img">
-                    <img src="img/ser02.png">
+                    <img src="img/driven.png">
                   </div>
                   <h3 class="pad-bt15">Driven</h3>
                   <p>Focused and attentive to the demands of the marketplace.</p>
@@ -143,16 +143,16 @@
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="wrap-item text-center">
                   <div class="item-img">
-                    <img src="img/ser03.png">
+                    <img src="img/career.png">
                   </div>
                   <h3 class="pad-bt15">Serious about careers</h3>
-                  <p>Eager to learn how to reach their career goals and they take action.</p>
+                  <p>Eager to learn how to reach their career goals and take action.</p>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="wrap-item text-center">
                   <div class="item-img">
-                    <img src="img/ser03.png">
+                    <img src="img/preparation.png">
                   </div>
                   <h3 class="pad-bt15">Serious about preparation</h3>
                   <p>We make sure they are primed and prepped for the workplace, even as freshmen.</p>
@@ -374,31 +374,31 @@
             <ul class="bxslider">
               <li>
                 <blockquote>
-                  <img src="img/thumb.png" class="img-responsive">
-                  <p>Come a day there won't be room for naughty men like us to slip about at all. This job goes south, there well may not be another. </p>
+                  <img src="img/meghna.jpg" class="img-responsive">
+                  <p>This community has played a big part in opening my eyes to the real world. I feel the greatest benefit of joining this community is meeting people who have the same goal as you and are willing to help you achieve yours.</p>
                 </blockquote>
-                <small>Shaun Paul, Client</small>
+                <small>Meghna Pai, Mentee</small>
               </li>
               <li>
                 <blockquote>
-                  <img src="img/thumb.png" class="img-responsive">
-                  <p>So here is us, on the raggedy edge. Don't push me, and I won't push you. </p>
+                  <img src="img/tahsin.jpg" class="img-responsive">
+                  <p>I have really been able to find a sense of direction for myself...this channel and many of the different companies and people that David and Anthony have linked us to are filled with people who ARE willing to help you.</p>
                 </blockquote>
-                <small>Marry Smith, Client</small>
+                <small>Tahsin Jahin, Mentee</small>
               </li>
               <li>
                 <blockquote>
-                  <img src="img/thumb.png" class="img-responsive">
-                  <p>Come a day there won't be room for naughty men like us to slip about at all. This job goes south, there well may not be another.</p>
+                  <img src="img/satyam.png" class="img-responsive">
+                  <p>We regularly share information about meetups, hackathons, and other resources to gain real world experience. These experiences have helped me make some of my best and most thoughtful career decisions. </p>
                 </blockquote>
-                <small>Vivek Singh, Client</small>
+                <small>Satyam Sharma, Mentee</small>
               </li>
               <li>
                 <blockquote>
-                  <img src="img/thumb.png" class="img-responsive">
-                  <p>So here is us, on the raggedy edge. Don't push me, and I won't push you.</p>
+                  <img src="img/michael.png" class="img-responsive">
+                  <p>Career mentoring is a huge part of getting internships, opportunities and a job after college. Sadly it is not easy to gain access to high quality mentoring. That's why this program was created by Anthony and David: To prep and make sure everyone is prepared for the real world.</p>
                 </blockquote>
-                <small>John Doe, Client</small>
+                <small>Michael Ousseinov, Mentee</small>
               </li>
             </ul>
           </div>
@@ -418,23 +418,18 @@
           <p class="sub-title pad-bt15">Yup! Big time! Our first cohort of mentees at CCNY are working this summer at RBC, Barclays, and Centiment. And these are our FRESHMEN!!</p>
           <hr class="bottom-line">
 
+          <h3>Getting a job is hard work!</h3>
+          <p class="sub-title pad-bt15">We know what it takes to succeed. We prep our students from Day 1. Before they even start their academics or think of looking for a job, never mind a career.</p>
+          <p class="sub-title pad-bt15">Our scholars must prove their value and worth. They must commit to give us their time and tenacity.</p>
+          <p class="sub-title pad-bt15">In turn, we commit to build their professional outlook. Break down barriers. Open doors to their future.<p>
+          <hr class="bottom-line">        
 
-           <h3>Getting a job is hard work!</h3>
-            <p class="sub-title pad-bt15">We know what it takes to succeed. We prep our students from Day 1. Before they even start their academics or think of looking for a job, never mind a career.</p>
-            <p class="sub-title pad-bt15">Our scholars must prove their value and worth. They must commit to give us their time and tenacity.</p>
-            <p class="sub-title pad-bt15">In turn, we commit to build their professional outlook. Break down barriers. Open doors to their future.<p>
+          <h3>The Future</h3>
+          <p class="sub-title pad-bt15">We know we are a stealth school. But we are in Tech Alley’s own backyard! Our home is CCNY 137th Street, in Harlem USA. We have a 140 year history of elevating the ranks of New York’s immigrants and first generation scholars.</p>
           <hr class="bottom-line">
 
-           <h3>Demand a lot, Get a lot</h3>
-            <p class="sub-title pad-bt15">We mentored and coached arranged meetings with professional mentors and all-in-all cloaked our freshmen CS honors students with the state of mind that they can excel.</p>
-          <hr class="bottom-line">          
-
-           <h3>The Future</h3>
-            <p class="sub-title pad-bt15">We know we are a stealth school. But we are in Tech Alley’s own backyard! Our home is CCNY 137th Street, in Harlem USA. We have a 140 year history of elevating the ranks of New York’s immigrants and first generation scholars.</p>
-            <hr class="bottom-line">
-
-           <h3>Born out of Necessity</h3>
-            <p class="sub-title pad-bt15">CCNY Code is a side project built out of duty and honor in February 2017 as an accident. A chance meeting between a CS student and a single alumnus Graduates of CCNY. Separated by disciplines, one a budding CS engineer, the other an ex-journalist and editor turned lawyer and asset manager. Separated by 40 years, David Wysoki and Anthony Shalagin met on campus after an event and realized they desired to do something spectacular. CCNY Code is their invention.</p>
+          <h3>Born out of Necessity</h3>
+          <p class="sub-title pad-bt15">CCNY Code is a side project built out of duty and honor in February 2017 as an accident. A chance meeting between a CS student and a single alumnus Graduates of CCNY. Separated by disciplines, one a budding CS engineer, the other an ex-journalist and editor turned lawyer and asset manager. Separated by 40 years, David Wysoki and Anthony Shalagin met on campus after an event and realized they desired to do something spectacular. CCNY Code is their invention.</p>
           <hr class="bottom-line">    
 
 
