Fix Satyam's pic

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
               </li>
               <li>
                 <blockquote>
-                  <img src="img/satyam.png" class="img-responsive">
+                  <img src="img/satyam.jpg" class="img-responsive">
                   <p>We regularly share information about meetups, hackathons, and other resources to gain real world experience. These experiences have helped me make some of my best and most thoughtful career decisions. </p>
                 </blockquote>
                 <small>Satyam Sharma, Mentee</small>
