--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                 <li class="active"><a href="#main-header">Home</a></li>
                 <li class=""><a href="#whatwedo">What we do</a></li>
                 <li class=""><a href="#blog">How we do it</a></li>
-                <li class=""><a href="#portfolio">Success</a></li>
                 <li class=""><a href="#testimonial">Testimonial</a></li>
                 <li class=""><a href="#service">Our Approach</a></li>
                 <li class=""><a href="#contact">Contact Us</a></li>
@@ -52,22 +51,18 @@
           </div>
         </nav>
         </header>
-        <div class="wrapper">
-        <div class="container">
-          <div class="row">
-            <div class="banner-info text-center wow fadeIn delay-05s">
-              <h2 class="bnr-title">CCNY Code</h2>
-              <h4 class="bnr-sub-title">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</h4>
-              <p class="bnr-para">We are a high-value, low-cost mentoring and career outreach platform</p>
-              <div class="overlay-detail">
-                <a href="#feature"><i class="fa fa-angle-down"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        </div>
       </div>
     </div>
+    <section id="mainidea">
+      <div class="container">
+        <div class="row">
+           <div class="col-md-12 text-center">
+            <p class="sub-title pad-bt15">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</p>
+            <p class="sub-title pad-bt15">We are a high-value, low-cost mentoring and career outreach platform</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--/ HEADER-->
     <!---->
     <section id="whatwedo" class="section-padding wow fadeInUp delay-05s">
