--- a/index.html
+++ b/index.html
@@ -51,14 +51,26 @@
           </div>
         </nav>
         </header>
+        <div class="wrapper">
+          <div class="container">
+            <div class="row">
+              <div class="banner-info text-center wow fadeIn delay-05s">
+                <div class="overlay-detail">
+                  <a href="#feature"><i class="fa fa-angle-down"></i></a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <section id="mainidea">
       <div class="container">
         <div class="row">
            <div class="col-md-12 text-center">
-            <p class="sub-title pad-bt15">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</p>
-            <p class="sub-title pad-bt15">We are a high-value, low-cost mentoring and career outreach platform</p>
+            <h2 class="sub-title pad-bt15">Propelling CCNY's Computer Science engineers into New York's tech ecosystem</h2>
+            <h2 class="sub-title pad-bt15">We are a high-value, low-cost mentoring and career outreach platform</h2>
           </div>
         </div>
       </div>
@@ -287,13 +299,11 @@
 
           <h2 class="service-title pad-bt15">Our Approach</h2>
           <h3>Does it work?</h3>
-          <p class="sub-title pad-bt15">Yup! Big time! Our first cohort of mentees at CCNY are working this summer at RBC, Barclays, and Centiment. And these are our FRESHMEN!!</p>
+          <p class="sub-title pad-bt15">Yup! Big time! Our freshmen are working this summer at RBC, Barclays, and Centiment.</p>
           <hr class="bottom-line">
-
           <h3>Getting a job is hard work!</h3>
           <p class="sub-title pad-bt15">We know what it takes to succeed. We prep our students from Day 1. Before they even start their academics or think of looking for a job, never mind a career.</p>
-          <p class="sub-title pad-bt15">Our scholars must prove their value and worth. They must commit to give us their time and tenacity.</p>
-          <p class="sub-title pad-bt15">In turn, we commit to build their professional outlook. Break down barriers. Open doors to their future.<p>
+          <p class="sub-title pad-bt15">We commit to build their professional outlook.<p>
           <hr class="bottom-line">        
 
           <h3>The Future</h3>
@@ -301,7 +311,7 @@
           <hr class="bottom-line">
 
           <h3>Born out of Necessity</h3>
-          <p class="sub-title pad-bt15">CCNY Code is a side project built out of duty and honor in February 2017 as an accident. A chance meeting between a CS student and a single alumnus Graduates of CCNY. Separated by disciplines, one a budding CS engineer, the other an ex-journalist and editor turned lawyer and asset manager. Separated by 40 years, David Wysoki and Anthony Shalagin met on campus after an event and realized they desired to do something spectacular. CCNY Code is their invention.</p>
+          <p class="sub-title pad-bt15">David Wysoki,a CCNY alumni, lawyer and asset manager; and Anthony Shalagin, a CS student and budding engineer, met on campus after an event and realized they desired to do something spectacular. CCNY Code is their invention.<p>
           <hr class="bottom-line">    
 
 
