Include companies where mentees interned

--- a/index.html
+++ b/index.html
@@ -292,18 +292,41 @@
     </section>
     <!---->
     <!---->
+    <section class="section-padding wow fadeInUp delay-05s" data-color="black" id="companies" class="companies">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2>Does it work?</h2>
+            <p class="sub-title pad-bt15">Yup! Big time! Our mentees have interned here:</p>
+            <hr class="bottom-line">
+            <!-- <h2 class="service-title pad-bt15">Companies where our mentees have interned</h2> -->
+            <!--PLATINUM-->
+            <div class="companiesection">
+              <div class="company"><img src = "img/rbc.png"></div>
+              <div class="company"><img src = "img/barclays.png"></div>
+            </div>
+            <!--GOLD-->
+            <div class="companiesection">
+              <div class="company"><img src = "img/centiment.png"></div>
+              <div class="company"><img src = "img/google.png"></div>
+              <div class="company"><img src = "img/bankofamerica.png"></div>
+            </div>
+          </div>
+        </div>
+      </div>  
+    </section>
+    <!---->
+    <!---->
     <section id="service" class="section-padding wow fadeInUp delay-05s">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
 
           <h2 class="service-title pad-bt15">Our Approach</h2>
-          <h3>Does it work?</h3>
-          <p class="sub-title pad-bt15">Yup! Big time! Our freshmen are working this summer at RBC, Barclays, and Centiment.</p>
+          
           <hr class="bottom-line">
           <h3>Getting a job is hard work!</h3>
-          <p class="sub-title pad-bt15">We know what it takes to succeed. We prep our students from Day 1. Before they even start their academics or think of looking for a job, never mind a career.</p>
-          <p class="sub-title pad-bt15">We commit to build their professional outlook.<p>
+          <p class="sub-title pad-bt15">We know what it takes to succeed. We prep our students from Day 1.We commit to build their professional outlook. </p>
           <hr class="bottom-line">        
 
           <h3>The Future</h3>
